--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,18 @@
 </head>
 <body>
     Hello World! Welcome to Chronus Continuum
+    <form action="/login" method="post">
+        <div>
+            <label>Username:</label>
+            <input type="text" name="username"/>
+        </div>
+        <div>
+            <label>Password:</label>
+            <input type="password" name="password"/>
+        </div>
+        <div>
+            <input type="submit" value="Log In"/>
+        </div>
+    </form>
 </body>
 </html>
