--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Chronus Continuum</title>
 </head>
 <body>
-    Hello World! Welcome to Chronus Continuum
-    <form action="/login" method="post">
-        <div>
-            <label>Username:</label>
-            <input type="text" name="username"/>
-        </div>
-        <div>
-            <label>Password:</label>
-            <input type="password" name="password"/>
-        </div>
-        <div>
-            <input type="submit" value="Log In"/>
-        </div>
-    </form>
+    <div class='container'>
+        <h1>Welcome to Chronus Continuum</h1>
+        <p>Log in to see your timepieces.</p>
+        <form action="/login" method="post">
+            <div class="form-group">
+                <label>Username:</label>
+                <input class="form-control" type="text" name="username"/>
+            </div>
+            <div class="form-group">
+                <label>Password:</label>
+                <input class="form-control" type="password" name="password"/>
+            </div>
+            <div>
+                <input class="btn btn-primary btn-block" type="submit" value="Log In"/>
+            </div>
+        </form>
+        <br>
+    </div>
 </body>
 </html>
